--- a/jfelipe.html
+++ b/jfelipe.html
@@ -1,4 +1,9 @@
 <html>
-
+      <head>
+        <title>Probando github</title>
+      </head>
+      <body>
+        <p>al pareceer es una herramienta muy interesante</p>
+      </body>
 
 </html>
